src/App.css
/* ... */
#bar1 {
  transform: translateY(-4px);
}
#bar3 {
  transform: translateY(4px);
}
.nav_opened li a{
  margin-right: 20px;
  color: white;
  text-decoration: none;
  font-size: 20px;
}
.nav_opened li a:hover{
  /*font-weight: bold;*/
  color: red;
}
.nav_opened li {
  list-style: none;
  padding: 4px 0;
}
.nav_opened {
  text-align: right;
  padding: 0;
  margin: 0 20px;
  transition: 0.3s ease;
  display: none;
}
.menu_bg, #menu-bar {
  top: 0;
  right: 5px;
  position: absolute;
}

#menu-bar {
  z-index: 2;
  /*margin-right: 20px;*/
}
.menu_bg {
  z-index: 1;
  width: 0;
  height: 0;
  margin: 65px -10px 20px 20px;
  border-radius: 50%;
  /*background: radial-gradient(circle,#b81123,#b81568);*/
  /*background: radial-gradient(circle, #A1D8DB, #76AAE7);*/
  background: radial-gradient(circle, #B12222, #FF0000);
  transition: 0.3s ease;
}
.change_bg {
  width: 550px;
  height: 550px;
  transform: translate(60%,-40%);
}
.change {
  margin: 30px -70px 20px 20px;
  display: block;
  background: transparent;
}
.change li {
  margin-right: 20px;
}
.change .bar {
  background-color: white;
}
.change #bar1 {
  transform: translateY(4px) rotateZ(-45deg);
}
.change #bar3 {
  transform: translateY(-4px) rotate(45deg);
}
.change #bar2 {
  opacity: 0;
}
@media screen and (max-width: 850px){
  #menu {
    display: block;
  }
  .nav {
    display: none;
  }
  .sort {
    margin-top: 15px;
  }
}
@media screen and (max-width: 1071px) {
  .sort {
    margin-top: 15px;
  }
  .sort__popup {
    position: absolute;
  }
}
@media screen and (min-width: 950px) {
  .content__top {
    display: flex;
  }
}
html {
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%
}

body {
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  color: #232323
}

a,
span,
p,
b,
h1,
h2,
h3,
h4,
h5 {
  color: #232323
}

h1 {
  font-size: 48px
}

h2 {
  font-weight: 600;
  font-size: 28px;
  line-height: 30px
}

a {
  text-decoration: none
}

.header {
  border-bottom: 1px solid #f6f6f6;
  background-color: white;
  z-index: 2;
  padding: 40px 0;
  height: 176px;
  position: fixed;
  /*width: 90%;*/
  width: calc(100vw - 80px);
  /*width: 100%;*/
  max-width: 1400px;
  margin: auto;
}

.header .container {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  justify-content: space-between
}

.header__logo {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex
}

.header__logo img {
  width: 95px;
  margin-right: 30px
}
.header__logo div {
  margin: auto auto;
}

.header__logo h1 {
  color: red;
  font-size: 24px;
  /*letter-spacing: 1%;*/
  text-transform: uppercase;
  font-weight: 800
}

.header__logo p {
  color: #7b7b7b
}
@media screen and (max-width: 500px)  {
  .header {
    width: 100%;
    top: 0;
    left: 0;
  }
  .header__cart {
    display: none;
  }
  #menu-bar {
    right: 50px;
  }

}
/*.header__cart__mobile {*/
/*  display: none;*/
/*}*/
.nav ul {
  display: flex;
  justify-content: space-between;
  width: 300px;
}

.nav ul li {
  font-size: 1.3rem;
}

.nav ul li a.active {
  border-bottom: 1px solid red;
  color: red;
}


.nav ul li a:hover {
  color: red;
}


.button {
  display: inline-block;
  background-color: red;
  border-radius: 30px;
  padding: 10px 20px;
  min-width: 100px;
  text-align: center;
  cursor: pointer;
  -webkit-transition: background-color .15s ease-in-out, border-color .15s ease-in-out;
  transition: background-color .15s ease-in-out, border-color .15s ease-in-out;
  border: 1px solid transparent;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none
}

.button,
.button span {
  color: #fff
}

.button i,
.button span,
.button path,
.button svg {
  -webkit-transition: all .15s ease-in-out;
  transition: all .15s ease-in-out
}

.button:hover {
  background-color: #C41E3A
}

.button:active {
  background-color: #900020;
  -webkit-transform: translateY(1px);
  transform: translateY(1px)
}

.button--circle {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 32px;
  height: 32px;
  min-width: 32px;
  padding: 0;
  border-width: 2px
}

.button--black {
  background-color: #232323
}

.button--black:hover,
.button--black:active {
  background-color: #3d3d3d
}

.button--outline {
  background-color: #fff;
  border-color: red;
}

.button--outline,
.button--outline span {
  color: red
}

.button--outline svg path {
  fill: red
}

.button--outline:hover {
  background-color: red
}

.button--outline:hover,
.button--outline:hover span {
  color: #fff
}

.button--outline:hover svg path {
  fill: #fff
}

.button--outline:active {
  background-color: #900020
}

.button__delimiter {
  width: 1px;
  height: 25px;
  background-color: rgba(255, 255, 255, 0.25);
  margin-left: 14px;
  margin-right: 14px
}

.button--add svg {
  margin-right: 2px
}

.button--add span {
  font-weight: 600;
  font-size: 16px
}

.button--add:hover i {
  background-color: #fff;
  color: red
}

.button--add i {
  display: inline-block;
  border-radius: 30px;
  background-color: red;
  color: #fff;
  font-weight: 600;
  width: 22px;
  height: 22px;
  font-style: normal;
  font-size: 13px;
  line-height: 22px;
  position: relative;
  top: -1px;
  left: 3px
}

.button--cart {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  line-height: 23px;
  padding: 12px 25px
}

.button--cart.mob {
  display: none;
}

.button--cart svg {
  margin-right: 8px;
  margin-bottom: 1px
}

.button--cart span {
  font-weight: 600;
  font-size: 16px
}
/* ... */

